@@ -3,7 +3,7 @@
 
 <html lang=en>
  <head>
-  <meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1'>
+  <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title></title></head>
  <body>
   <div><a name='docexample.list_of_integers'>
@@ -204,4 +204,4 @@ would be mandatory, in the current specification system.
      <dd>
  An attribute named a_nokind, with unspecified kind.
 </dd></dl></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed Oct 18 21:10:48 2006</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Mon Apr  7 12:39:48 2008</div></body></html>
