@@ -3,7 +3,7 @@
 
 <html lang=en>
  <head>
-  <meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1'>
+  <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title></title></head>
  <body>
   <div><a name='heapykinds.RootStateType'>
@@ -116,4 +116,4 @@ but counting in the reversed order of the frame list. Thus the first
 started frame is 0, and in general the most recent frame has a number
 that is the number of frames it has before it in call order.
 </p></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed Oct 18 21:10:44 2006</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Mon Apr  7 12:39:48 2008</div></body></html>
