@@ -3,7 +3,7 @@
 
 <html lang=en>
  <head>
-  <meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1'>
+  <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title></title></head>
  <body>
   <div><a name='heapykinds.Use'>
@@ -771,4 +771,4 @@ use a syntax that could be used to access those variables directly from Python.<
               <td> A key in a dictionary, at the indicated place in its keys().</td><! --  XXX __dict__.keys() - not used - should think about this
  --></tr></table></dd></dl></dd></dl></dd></dl></dd>
      <dd> )</dd></dl></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed Oct 18 21:10:44 2006</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Mon Apr  7 12:39:48 2008</div></body></html>
